2006-01-25  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-summary-tool-bar)
	(gnus-summary-tool-bar-gnome, gnus-summary-tool-bar-retro)
	(gnus-summary-tool-bar-zap-list): New variables.
	(gnus-summary-make-tool-bar): Complete rewrite using
	`gmm-tool-bar-from-list'.

	* gnus-group.el (gnus-group-tool-bar, gnus-group-tool-bar-gnome)
	(gnus-group-tool-bar-retro, gnus-group-tool-bar-zap-list): New
	variables.
	(gnus-group-make-tool-bar): Complete rewrite using
	`gmm-tool-bar-from-list'.
	(gnus-group-tool-bar-update): New function.

	* message.el (message-mode-field-menu): Add "Show hidden Headers".

2006-01-25  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-uu.el (mm-uu-dissect-text-parts): Ignore it if a given part
	is dissected into a single part of which the type is the same as
	the given one; decode charset.

2006-01-21  Kevin Ryde  <user42@zip.com.au>

	* mailcap.el (mailcap-parse-mailcap-extras): "test" key must go
	into alists as symbol not string, since that's what
	mailcap-viewer-passes-test and mailcap-mailcap-entry-passes-test
	look for.

2006-01-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* gmm-utils.el (gmm-tool-bar-item): Add "Separator".
	(gmm-tool-bar-from-list): Suppress tooltip for `gmm-ignore'.

	* message.el (message-tool-bar-gnome): Use gmm-ignore.

2006-01-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-xmas.el (gnus-mime-security-button-menu): New alias.
	(gnus-xmas-mime-security-button-menu): New function.

	* gnus-art.el (gnus-mime-security-button-commands): New variable.
	(gnus-mime-security-button-menu): New definition.
	(gnus-mime-security-button-map): Use them.
	(gnus-mime-security-button-menu): New function.
	(gnus-insert-mime-security-button): Addition to help echo.
	(gnus-mime-security-run-function, gnus-mime-security-save-part)
	(gnus-mime-security-pipe-part): New functions.

	* mm-uu.el (mm-uu-buttonize-original-text-parts): Remove.
	(mm-uu-dissect-text-parts): Revert a part of 2006-01-23 change.
